# spiderbot

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  platformio.ini
include/: constants.h  robot.h
include/commands/: blink.h  blinkMorse.h
include/core/: command.h  log.h  sequentialCommandGroup.h  subsystem.h  ticker.h
include/subsystems/: led.h  leg.h
include/util/: motor.h
lib/arduino-shim/: library.json
lib/arduino-shim/include/: ArduinoShim.h
src/: constants.h  main.cpp  robot.cpp  robot.h  test.c
src/commands/: blink.cpp  blink.h  blinkMorse.cpp  blinkMorse.h
src/core/: command.cpp  command.h  constants.h  log.cpp  periodic.cpp  periodic.h  sequentialCommandGroup.cpp  sequentialCommandGroup.h  subsystem.cpp  subsystem.h  ticker.cpp  ticker.h
src/subsystems/: led.cpp  led.h
src/util/: motor.cpp
test/: test-deploy.c  test.c
